--- a/Visualize.html
+++ b/Visualize.html
@@ -17,12 +17,14 @@
         }
         #inputs {
             margin-bottom: 20px;
+            text-align: center;
         }
         .circle {
             width: 20px;
             height: 20px;
             border-radius: 50%;
             margin: 5px;
+            display: inline-block;
         }
         .completed {
             background-color: green;
@@ -42,32 +44,10 @@
         <input type="date" id="birthdate">
         <label for="lifeExpectancy">Life Expectancy:</label>
         <input type="number" id="lifeExpectancy" min="1" max="120">
-        <button onclick="visualizeLife()">Visualize</button>
+        <button id="visualizeButton">Visualize</button>
     </div>
     <div id="visualization"></div>
 
-    <script>
-        function visualizeLife() {
-            const birthdate = new Date(document.getElementById('birthdate').value);
-            const lifeExpectancy = parseInt(document.getElementById('lifeExpectancy').value);
-            const today = new Date();
-            const age = today.getFullYear() - birthdate.getFullYear();
-            const visualizationContainer = document.getElementById('visualization');
-            visualizationContainer.innerHTML = ''; // Clear previous visualization
-
-            for (let i = 0; i < lifeExpectancy; i++) {
-                const circle = document.createElement('div');
-                circle.classList.add('circle');
-                if (i < age) {
-                    circle.classList.add('completed');
-                } else if (i === age) {
-                    circle.classList.add('current');
-                } else {
-                    circle.classList.add('upcoming');
-                }
-                visualizationContainer.appendChild(circle);
-            }
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
